[459589] Add a launcher icon to the menu and desktop
https://bugs.eclipse.org/bugs/show_bug.cgi?id=459589